--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "City": "City",
     "Company": "Company",
-    "Find the city...": "Find the city..."
+    "Find the city...": "Find the city...",
+    "Login": "Login"
 }
