Fix gestion internacionalizacion

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,5 +2,5 @@
     "City": "City",
     "Company": "Company",
     "Find the city...": "Find the city...",
-    "Login": "Login"
+    "This is the home page": "This is the home page"
 }
