--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,5 +1,6 @@
 {
     "City": "Ciudad",
     "Company": "Empresa",
-    "Find the city...": "Busca la ciudad..."
+    "Find the city...": "Busca la ciudad...",
+    "This is the home page": "Esta es la pagina principal"
 }
