--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -1,5 +1,6 @@
 {
     "City": "Città",
     "Company": "Azienda",
-    "Find the city...": "Cerca la città..."
+    "Find the city...": "Cerca la città...",
+    "This is the home page": "Questa è la pagina principale"
 }
