traduccion castellano y galego

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,6 +1,133 @@
 {
-    "City": "Ciudad",
-    "Company": "Empresa",
-    "Find the city...": "Busca la ciudad...",
-    "This is the home page": "Esta es la pagina principal"
+  "Admin icon": "Icono de Administrador",
+  "User icon": "Icono de Usuario",
+  "Company icon": "Icono de Empresa",
+  "Sign in": "Iniciar sesión",
+  "Sign up": "Registrarse",
+  "Sign out": "Salir",
+  "Menu icon": "Icono de Menú",
+  "My company": "Mi empresa",
+  "Create review": "Hacer una valoración",
+  "My reviews": "Mis valoraciones",
+  "Profile": "Perfil",
+  "Change password": "Cambiar contraseña",
+  "Delete account": "Borrar cuenta",
+  "About": "Acerca de",
+  "Contact": "Contacto",
+  "Find the city...": "Busca la localidad...",
+  "Find great places to work": "Encuentra las mejores empresas para trabajar",
+  "Get access to rating and company reviews": "Accede a calificaciones y valoraciones de empresas",
+  "Company name": "Nombre de la empresa",
+  "Find": "Buscar",
+  "Link to Advanced search page": "Enlace a la página de Búsqueda avanzada",
+  "Advanced search": "Búsqueda avanzada",
+  "Do you want to rate a company?": "¿Quieres valorar una empresa?",
+  "Your reviews will be anonimous": "Tus respuestas serán anónimas",
+  "Top Ten Workplaces": "Empresas mejor valoradas",
+  "Company logo": "Logotipo de empresa",
+  "Default image company": "Imagen por defecto de empresa",
+  "reviews": "valoraciones",
+  "Overall rating": "Valoración general",
+  "Name": "Nombre",
+  "Description": "Descripción",
+  "About my company": "Sobre mi empresa",
+  "Sector": "Sector",
+  "Sector name": "Nombre del sector",
+  "URL": "URL",
+  "Website": "Sitio web",
+  "LinkedIn": "LinkedIn",
+  "LinkedIn address": "Dirección de LinkedIn",
+  "Headquarters address": "Dirección de la sede",
+  "Headquarters": "Localidad",
+  "Field required": "Campo necesario",
+  "Save": "Guardar",
+  "Connecting to the server...": "Conectando con el servidor...",
+  "Page not found": "Página no encontrada",
+  "Sorry, we can't find the page you're looking for.": "Lo sentimos, no podemos encontrar la página que buscas.",
+  "Go back Home": "Volver al Inicio",
+  "Lost e-mail activation?": "¿No encuentras el e-mail de activación?",
+  "E-mail": "E-mail",
+  "Enter your e-mail": "Introduce tu e-mail",
+  "We will resend you a new activation e-mail": "Te reenviaremos un nuevo e-mail de activación",
+  "Send": "Enviar",
+  "This company doesn't have any review": "Esta empresa no tiene ninguna valoración",
+  "Salary": "Sueldo",
+  "Internal training": "Formación interna",
+  "Growth opportunities": "Oportunidades de promoción",
+  "Work environment": "Ambiente de trabajo",
+  "Work&Life balance": "Conciliación vida personal/laboral",
+  "About us": "Quiénes somos",
+  "Search for": "Buscar por",
+  "Job title": "Nombre del puesto",
+  "City": "Localidad",
+  "Average salary": "Sueldo medio",
+  "month": "mes",
+  "Sort by": "Ordenar por",
+  "Create a review": "Hacer una valoración",
+  "Rate a company you've worked for in the past 3 years.": "Evalúa una empresa en la que hayas trabajado en los últimos 3 años.",
+  "Reviews published are anonymous.": "Las valoraciones se publican de forma anónima.",
+  "Next": "Siguiente",
+  "Rate company": "Calificar empresa",
+  "Your salary": "Tu sueldo",
+  "Example: 2.000": "Ejemplo: 2.000",
+  "Could you add something else to your rating?": "Escribe tu valoración de esta empresa",
+  "Review summary": "Título",
+  "Please, write a title": "Por favor, escribe un título",
+  "Your review": "Tu valoración",
+  "Tell us about your job": "Acerca de tu trabajo",
+  "Company's sector": "Sector de la empresa",
+  "Enter your position": "Introduce tu puesto de trabajo",
+  "Start year": "Año de inicio",
+  "End year": "Año de fin",
+  "I currently work here": "Empleo actual",
+  "You don't have any review": "No has realizado ninguna valoración",
+  "Icon for denounce a review": "Icono para denunciar una valoración",
+  "Link for sending e-mail to the web administrator": "Enlace para enviar un e-mail al administrador del sitio web",
+  "Denounce": "Denunciar",
+  "Icon for delete a review": "Icono para denunciar una valoración",
+  "Link for deleting a review": "Enlace para eliminar una valoración",
+  "Delete": "Borrar",
+  "For deleting your account, please type": "Para borrar tu cuenta, por favor, escribe",
+  "Update profile": "Actualizar perfil",
+  "Forgot password?": "¿Olvidaste la contraseña?",
+  "We will send you an e-mail with a new password": "Te enviaremos un e-mail con una nueva contraseña",
+  "Current password": "Contraseña actual",
+  "Enter current password": "Introduce contraseña actual",
+  "New password": "Nueva contraseña",
+  "Enter new password": "Introduce nueva contraseña",
+  "Confirm new password": "Confirma nueva contraseña",
+  "The password and the confirmation should match": "La contraseña y su confirmación deben coincidir",
+  "Previous": "Anterior",
+  "Create your account": "Crear tu cuenta",
+  "Employee/ex-employee": "Empleado/a-Exempleado/a",
+  "Company": "Empresa",
+  "Enter your name": "Introduce tu nombre",
+  "Password": "Contraseña",
+  "Enter your password": "Introduce tu contraseña",
+  "Confirm password": "Confirma contraseña",
+  "Confirm your password": "Confirma tu contraseña",
+  "You will receive an activation e-mail": "Recibirás un e-mail de activación",
+  "Create": "Crear",
+  "Please sign in": "Por favor inicia sesión",
+
+  "Account activated": "Cuenta activada",
+  "The e-mail is required": "El e-mail es necesario",
+  "The e-mail is not valid": "El e-mail no es válido",
+  "Maximun is 45 characters": "Máximo 45 caracteres",
+  "The password is required": "La contraseña es necesaria",
+  "The password is not valid": "La contraseña no es válida",
+  "The LinkedIn address is not valid": "La dirección de LinkedIn no es válida",
+  "Maximun is 255 characters": "Máximo 255 caracteres",
+  "The name is required": "El nombre es necesario",
+  "Company name is required": "El nombre de la empresa es necesario",
+  "Minimun is 3 characters": "Mínimo 3 caracteres",
+  "Maximun is 60 characters": "Máximo 60 caracteres",
+  "Minimun is 10 characters": "Mínimo 10 caracteres",
+  "Maximun is 1000 characters": "Máximo 1000 caracteres",
+  "The URL is not valid": "La URL no es válida",
+  "This field is required": "Este campo es necesario",
+  "Must type CONFIRM DELETE": "Debes escribir CONFIRM DELETE",
+  "The ammount is not valid": "La cantidad no es válida",
+  "Minimun is 5 characters": "Mínimo 5 caracteres",
+  "Maximun is 30 characters": "Máximo 30 caracteres"
 }
