--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -131,5 +131,7 @@
   "Maximun is 30 characters": "Maximun is 30 characters",
   "Server down": "Server down",
   "Internal server error": "Internal server error",
-  "Enter a company name": "Enter a company name"
+  "Enter a company name": "Enter a company name",
+  "Position": "Position",
+  "Position name": "Position name"
 }
