--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -81,9 +81,9 @@
   "End year": "End year",
   "I currently work here": "I currently work here",
   "You don't have any review": "You don't have any review",
-  "Icon for denounce a review": "Icon for denounce a review",
+  "Icon for reporting a review": "Icon for reporting a review",
   "Link for sending e-mail to the web administrator": "Link for sending e-mail to the web administrator",
-  "Denounce": "Denounce",
+  "Report": "Report",
   "Icon for delete a review": "Icon for delete a review",
   "Link for deleting a review": "Link for deleting a review",
   "Delete": "Delete",
@@ -134,5 +134,10 @@
   "Enter a company name": "Enter a company name",
   "Position": "Position",
   "Position name": "Position name",
-  "Icon gitHub": "Icon gitHub"
+  "Icon gitHub": "Icon gitHub",
+  "Company not found": "Company not found",
+  "today": "today",
+  "Do you want to report this review?": "Do you want to report this review?",
+  "Do you want to delete this review?": "Do you want to delete this review?",
+  "Reported review": "Reported review"
 }
