--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -81,9 +81,9 @@
   "End year": "Año de fin",
   "I currently work here": "Empleo actual",
   "You don't have any review": "No has realizado ninguna valoración",
-  "Icon for denounce a review": "Icono para denunciar una valoración",
+  "Icon for reporting a review": "Icono para denunciar una valoración",
   "Link for sending e-mail to the web administrator": "Enlace para enviar un e-mail al administrador del sitio web",
-  "Denounce": "Denunciar",
+  "Report": "Denunciar",
   "Icon for delete a review": "Icono para eliminar una valoración",
   "Link for deleting a review": "Enlace para eliminar una valoración",
   "Delete": "Borrar",
@@ -134,5 +134,10 @@
   "Enter a company name": "Introduce un nombre de empresa",
   "Position": "Puesto",
   "Position name": "Nombre del puesto",
-  "Icon gitHub": "Icono gitHub"
+  "Icon gitHub": "Icono gitHub",
+  "Company not found": "Empresa no encontrada",
+  "today": "hoy",
+  "Do you want to report this review?": "¿Quieres denunciar esta valoración?",
+  "Do you want to delete this review?": "¿Quieres eliminar esta valoración?",
+  "Reported review": "Valoración denunciada"
 }
