--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -81,9 +81,9 @@
   "End year": "Ano de fin",
   "I currently work here": "Emprego actual",
   "You don't have any review": "Non fixeches ningunha valoración",
-  "Icon for denounce a review": "Icona para denunciar unha valoración",
+  "Icon for reporting a review": "Icona para denunciar unha valoración",
   "Link for sending e-mail to the web administrator": "Ligazón para enviar un e-mail ao administrador do sitio web",
-  "Denounce": "Denunciar",
+  "Report": "Denunciar",
   "Icon for delete a review": "Icona para eliminar unha valoración",
   "Link for deleting a review": "Ligazón para eliminar unha valoración",
   "Delete": "Borrar",
@@ -134,5 +134,10 @@
   "Enter a company name": "Insire un nome de empresa",
   "Position": "Posto",
   "Position name": "Nome do posto",
-  "Icon gitHub": "Icona de gitHub"
+  "Icon gitHub": "Icona de gitHub",
+  "Company not found": "Empresa non atopada",
+  "today": "hoxe",
+  "Do you want to report this review?": "¿Queres denunciar esta valoración?",
+  "Do you want to delete this review?": "¿Queres eliminar esta valoración?",
+  "Reported review": "Valoración denunciada"
 }
