--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -21,7 +21,7 @@
   "Find": "Cerca",
   "Link to Advanced search page": "Link alla pagina di ricerca avanzata",
   "Advanced search": "Ricerca avanzata",
-  "Do you want to rate a company?": "¿Vuoi valutare una impresa?",
+  "Do you want to rate a company?": "¿Vuoi valutare un'impresa?",
   "Your reviews will be anonimous": "Le tue risposte saranno anonime",
   "Top Ten Workplaces": "Le dieci imprese miglior valutate",
   "Company logo": "Logo dell'impresa",
@@ -64,10 +64,10 @@
   "month": "mese",
   "Sort by": "Ordina per",
   "Create a review": "Crea una valutazione",
-  "Rate a company you've worked for in the past 3 years.": "Valuta una impresa nella quale abbia lavorato negli ultimi 3 anni.",
+  "Rate a company you've worked for in the past 3 years.": "Valuta un'impresa nella quale tu abbia lavorato negli ultimi 3 anni.",
   "Reviews published are anonymous.": "Le valutazioni sono anonime.",
   "Next": "Avanti",
-  "Rate company": "Valuta impresa",
+  "Rate company": "Valuta l'impresa",
   "Your salary": "Il tuo stipendio",
   "Example: 2000": "Esempio: 2000",
   "Could you add something else to your rating?": "Vuoi scrivere altro rigurdo la tua valorazione?",
@@ -81,9 +81,9 @@
   "End year": "Anno di fine",
   "I currently work here": "Lavoro attuale",
   "You don't have any review": "Non hai effettuato nessuna valutazione",
-  "Icon for denounce a review": "Icona per denunciare una valutazione",
+  "Icon for reporting a review": "Icona per denunciare una valutazione",
   "Link for sending e-mail to the web administrator": "Link per inviare una e-mail all'amministratore della pagina web",
-  "Denounce": "Denuncia",
+  "Report": "Denuncia",
   "Icon for delete a review": "Icona par eliminare una valutazione",
   "Link for deleting a review": "Link per eliminare una valutazione",
   "Delete": "Elimina",
@@ -134,5 +134,10 @@
   "Enter a company name": "Inserisci il nome dell'impresa",
   "Position": "Ruolo",
   "Position name": "Nome ruolo",
-  "Icon gitHub": "Icona gitHub"
+  "Icon gitHub": "Icona gitHub",
+  "Company not found": "Impresa non trovata",
+  "today": "oggi",
+  "Do you want to report this review?": "Vuoi denunciare questa valutazione?",
+  "Do you want to delete this review?": "Vuoi eliminare questa valutazione?",
+  "Reported review": "Valutazione denunciata"
 }
