AdvancedSearch layout y menu app

--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -97,7 +97,7 @@
   "Enter new password": "Inserisci la nuova password",
   "Confirm new password": "Conferma la nuova password",
   "The password and the confirmation should match": "La password e la sua conferma devono coincidere",
-  "Previous": "Precedente",
+  "Previous": "Indietro",
   "Create your account": "Crea il tuo account",
   "Employee/ex-employee": "Impiegato/a-Eximpiegato/a",
   "Company": "Impresa",
