--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -139,5 +139,6 @@
   "today": "today",
   "Do you want to report this review?": "Do you want to report this review?",
   "Do you want to delete this review?": "Do you want to delete this review?",
-  "Reported review": "Reported review"
+  "Reported review": "Reported review",
+  "Person searching with a flashlight": "Person searching with a flashlight"
 }
