--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -139,5 +139,6 @@
   "today": "hoy",
   "Do you want to report this review?": "¿Quieres denunciar esta valoración?",
   "Do you want to delete this review?": "¿Quieres eliminar esta valoración?",
-  "Reported review": "Valoración denunciada"
+  "Reported review": "Valoración denunciada",
+  "Person searching with a flashlight": "Persona buscando con una linterna"
 }
