--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -139,5 +139,6 @@
   "today": "hoxe",
   "Do you want to report this review?": "¿Queres denunciar esta valoración?",
   "Do you want to delete this review?": "¿Queres eliminar esta valoración?",
-  "Reported review": "Valoración denunciada"
+  "Reported review": "Valoración denunciada",
+  "Person searching with a flashlight": "Persoa buscando cunha lanterna"
 }
