--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -139,5 +139,6 @@
   "today": "oggi",
   "Do you want to report this review?": "Vuoi denunciare questa valutazione?",
   "Do you want to delete this review?": "Vuoi eliminare questa valutazione?",
-  "Reported review": "Valutazione denunciata"
+  "Reported review": "Valutazione denunciata",
+  "Person searching with a flashlight": "Person searching with a flashlight"
 }
