--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -140,5 +140,6 @@
   "Do you want to report this review?": "Do you want to report this review?",
   "Do you want to delete this review?": "Do you want to delete this review?",
   "Reported review": "Reported review",
-  "Person searching with a flashlight": "Person searching with a flashlight"
+  "Person searching with a flashlight": "Person searching with a flashlight",
+  "Choose file": "Choose file"
 }
