--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -140,5 +140,6 @@
   "Do you want to report this review?": "¿Quieres denunciar esta valoración?",
   "Do you want to delete this review?": "¿Quieres eliminar esta valoración?",
   "Reported review": "Valoración denunciada",
-  "Person searching with a flashlight": "Persona buscando con una linterna"
+  "Person searching with a flashlight": "Persona buscando con una linterna",
+  "Choose file": "Selecciona un archivo"
 }
