--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -140,5 +140,6 @@
   "Do you want to report this review?": "Vuoi denunciare questa valutazione?",
   "Do you want to delete this review?": "Vuoi eliminare questa valutazione?",
   "Reported review": "Valutazione denunciata",
-  "Person searching with a flashlight": "Person searching with a flashlight"
+  "Person searching with a flashlight": "Person searching with a flashlight",
+  "Choose file": "Seleziona un file"
 }
