css some pages and company logos

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -140,5 +140,6 @@
   "Reported review": "Reported review",
   "Person searching with a flashlight": "Person searching with a flashlight",
   "Date": "Date",
-  "Choose file": "Choose file"
+  "Choose file": "Choose file",
+  "Image company": "Image company"
 }
