--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -140,5 +140,6 @@
   "Reported review": "Valoración denunciada",
   "Person searching with a flashlight": "Persona buscando con una linterna",
   "Date": "Fecha",
-  "Choose file": "Selecciona un archivo"
+  "Choose file": "Selecciona un archivo",
+  "Image company": "Imagen de empresa"
 }
