--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -140,5 +140,6 @@
   "Reported review": "Valoración denunciada",
   "Person searching with a flashlight": "Persoa buscando cunha lanterna",
   "Date": "Data",
-  "Choose file": "Selecciona un arquivo"
+  "Choose file": "Selecciona un arquivo",
+  "Image company": "Imaxe de empresa"
 }
