--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -140,5 +140,6 @@
   "Reported review": "Valutazione denunciata",
   "Person searching with a flashlight": "Person searching with a flashlight",
   "Date": "Data",
-  "Choose file": "Seleziona un file"
+  "Choose file": "Seleziona un file",
+  "Image company": "Immagine dell'impresa"
 }
