--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -45,7 +45,7 @@
   "Page not found": "Página no encontrada",
   "Sorry, we can't find the page you're looking for.": "Lo sentimos, no podemos encontrar la página que buscas.",
   "Go back Home": "Volver al Inicio",
-  "Lost e-mail activation?": "¿No encuentras el e-mail de activación?",
+  "Lost e-mail activation?": "¿Perdiste el e-mail de activación?",
   "E-mail": "E-mail",
   "Enter your e-mail": "Introduce tu e-mail",
   "We will resend you a new activation e-mail": "Te reenviaremos un nuevo e-mail de activación",
