Spinner, upload logo y componente cities

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -141,5 +141,7 @@
   "Person searching with a flashlight": "Persona buscando con una linterna",
   "Date": "Fecha",
   "Choose file": "Selecciona un archivo",
-  "Image company": "Imagen de empresa"
+  "Image company": "Imagen de empresa",
+  "No reviews": "No hay valoraciones",
+  "No companies yet": "Todavía no hay empresas"
 }
