--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -141,5 +141,7 @@
   "Person searching with a flashlight": "Person searching with a flashlight",
   "Date": "Date",
   "Choose file": "Choose file",
-  "Image company": "Image company"
+  "Image company": "Image company",
+  "No reviews": "No reviews",
+  "No companies yet": "No companies yet"
 }
