--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -138,8 +138,10 @@
   "Do you want to report this review?": "Vuoi denunciare questa valutazione?",
   "Do you want to delete this review?": "Vuoi eliminare questa valutazione?",
   "Reported review": "Valutazione denunciata",
-  "Person searching with a flashlight": "Person searching with a flashlight",
+  "Person searching with a flashlight": "Persona che cerca con una lanterna",
   "Date": "Data",
   "Choose file": "Seleziona un file",
-  "Image company": "Immagine dell'impresa"
+  "Image company": "Immagine dell'impresa",
+  "No reviews": "Non ci sono valutazioni",
+  "No companies yet": "Non ci sono ancora imprese"
 }
