CSS front responsive

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -141,5 +141,6 @@
   "Person searching with a flashlight": "Person searching with a flashlight",
   "Date": "Date",
   "Choose file": "Choose file",
-  "Image company": "Image company"
+  "Image company": "Image company",
+  "Review date": "Review date"
 }
