--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -141,5 +141,6 @@
   "Person searching with a flashlight": "Persona buscando con una linterna",
   "Date": "Fecha",
   "Choose file": "Selecciona un archivo",
-  "Image company": "Imagen de empresa"
+  "Image company": "Imagen de empresa",
+  "Review date": "Fecha valoración"
 }
