--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -141,5 +141,6 @@
   "Person searching with a flashlight": "Persoa buscando cunha lanterna",
   "Date": "Data",
   "Choose file": "Selecciona un arquivo",
-  "Image company": "Imaxe de empresa"
+  "Image company": "Imaxe de empresa",
+  "Review date": "Data valoración"
 }
