--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -141,5 +141,6 @@
   "Person searching with a flashlight": "Person searching with a flashlight",
   "Date": "Data",
   "Choose file": "Seleziona un file",
-  "Image company": "Immagine dell'impresa"
+  "Image company": "Immagine dell'impresa",
+  "Review date": "Data valutazione"
 }
