varios css y fixes

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -22,7 +22,7 @@
   "Link to Advanced search page": "Link to Advanced search page",
   "Advanced search": "Advanced search",
   "Do you want to rate a company?": "Do you want to rate a company?",
-  "Your reviews will be anonimous": "Your reviews will be anonimous",
+  "Your reviews will be anonymous": "Your reviews will be anonymous",
   "Best regarded workplaces": "Best regarded workplaces",
   "Company logo": "Company logo",
   "Default image company": "Default image company",
