--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -22,7 +22,7 @@
   "Link to Advanced search page": "Enlace a la página de Búsqueda avanzada",
   "Advanced search": "Búsqueda avanzada",
   "Do you want to rate a company?": "¿Quieres valorar una empresa?",
-  "Your reviews will be anonimous": "Tus respuestas serán anónimas",
+  "Your reviews will be anonymous": "Tus respuestas serán anónimas",
   "Best regarded workplaces": "Empresas mejor valoradas",
   "Company logo": "Logotipo de empresa",
   "Default image company": "Imagen por defecto de empresa",
