--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -22,7 +22,7 @@
   "Link to Advanced search page": "Ligazón á páxina de Busca avanzada",
   "Advanced search": "Busca avanzada",
   "Do you want to rate a company?": "¿Queres valorar unha empresa?",
-  "Your reviews will be anonimous": "As túas respostas serán anónimas",
+  "Your reviews will be anonymous": "As túas respostas serán anónimas",
   "Best regarded workplaces": "Empresas mellor valoradas",
   "Company logo": "Logotipo de empresa",
   "Default image company": "Imaxe por defecto de empresa",
