--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -15,14 +15,14 @@
   "About": "About",
   "Contact": "Contacto",
   "Find the city...": "Cerca la città...",
-  "Find great places to work": "Cerca la miglior impresa per lavorare",
+  "Find great places to work": "Cerca la migliore impresa dove lavorare",
   "Get access to rating and company reviews": "Accedi alle valorazioni e valutazioni delle imprese",
   "Company name": "Nome dell'impresa",
   "Find": "Cerca",
   "Link to Advanced search page": "Link alla pagina di ricerca avanzata",
   "Advanced search": "Ricerca avanzata",
   "Do you want to rate a company?": "¿Vuoi valutare un'impresa?",
-  "Your reviews will be anonimous": "Le tue risposte saranno anonime",
+  "Your reviews will be anonymous": "Le tue risposte saranno anonime",
   "Best regarded workplaces": "Imprese miglior valutate",
   "Company logo": "Logo dell'impresa",
   "Default image company": "Immagine di default dell'impresa",
