--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -152,5 +152,7 @@
   "Close": "Close",
   "Uploading files...": "Uploading files...",
   "Choose File": "Choose File",
-  "Upload": "Upload"
+  "Upload": "Upload",
+  "Web portal for rating companies through job reviews carried out by employees or former employees.": "Web portal for rating companies through job reviews carried out by employees or former employees.",
+  "Please, come in...": "Please, come in..."
 }
