--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -152,5 +152,7 @@
   "Close": "Cerrar",
   "Uploading files...": "Subiendo...",
   "Choose File": "Seleccionar",
-  "Upload": "Subir"
+  "Upload": "Subir",
+  "Web portal for rating companies through job reviews carried out by employees or former employees.": "Portal web de evaluación de empresas mediante valoraciones de puestos de trabajo realizadas por empleados o exempleados.",
+  "Please, come in...": "Entra y conócenos..."
 }
