--- a/src/locales/gl/translation.json
+++ b/src/locales/gl/translation.json
@@ -152,5 +152,7 @@
   "Close": "Pechar",
   "Uploading files...": "Subindo...",
   "Choose File": "Escoller",
-  "Upload": "Subir"
+  "Upload": "Subir",
+  "Web portal for rating companies through job reviews carried out by employees or former employees.": "Portal web de avaliación de empresas mediante valoracións de postos de traballo realizadas por empregados ou exempregados.",
+  "Please, come in...": "Entra a coñecernos..."
 }
