--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -152,5 +152,7 @@
   "Close": "Chiudi",
   "Uploading files...": "Uploading...",
   "Choose File": "Scegli",
-  "Upload": "Upload"
+  "Upload": "Upload",
+  "Web portal for rating companies through job reviews carried out by employees or former employees.": "Portale web per valutare le imprese mediante valorazioni del posto di lavoro realizzato da impegati o ex-impiegati.",
+  "Please, come in...": "Entra a scoprirlo..."
 }
